# src/main/java/br/com/workbox/security/controllers/RoleController.java
@@ -10,7 +10,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 @RestController
-@RequestMapping("/api/role")
+@RequestMapping("/api/v1/role")
 public class RoleController {
 
     private final RoleService roleService;
